--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
@@ -67,6 +67,7 @@
 			SurveyBuild._logic = %bind(:11);			//控制逻辑
 			MsgSet = %bind(:12);						//双语化消息集合
 			SurveyBuild.subState = "%bind(:19)";		//问卷提交状态
+			SurveyBuild.readonly = "%bind(:22)";		//问卷实例是否只读
 			$.datepicker.setDefaults($.datepicker.regional['%bind(:16)']);	//日期双语化
 	    	$.datepicker._gotoToday = function (id) {
                 $(id).datepicker('setDate', new Date()).datepicker('hide').blur();
@@ -276,7 +277,8 @@
 		/*保存在线调查*/
 		function SaveSurvey(cType){
 			processing();
-			if(SurveyBuild.subState == 'S'){
+			/*if(SurveyBuild.subState == 'S'){*/
+			if(SurveyBuild.readonly == 'Y'){
 				if(SurveyBuild.curPageNo == 1 || SurveyBuild.maxPage < 2){
 					$(".pagebtn1").hide();
 				}else{
@@ -307,6 +309,7 @@
 					if (f.state.errcode == "0") {
 						SurveyBuild.appInsId = f.comContent.insid;
 						SurveyBuild.subState = f.comContent.subState;
+						SurveyBuild.readonly = f.comContent.readonly;
 						if (f.comContent.code == "0") {
 							if (cType == "SUBMIT"){
 								noteing(MsgSet.SAVE_SUCCEED);
@@ -459,7 +462,8 @@
 				$(".pagebtn2").hide();
 			}
 			/*已提交只读*/
-			if(SurveyBuild.subState == "S"){
+			/*if(SurveyBuild.subState == "S"){*/
+			if(SurveyBuild.readonly == "Y"){
 				$("form input").prop("readonly", "readonly");
 				$("form select").prop("readonly", "readonly");
 				$("form textarea").prop("readonly", "readonly");
