--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_ZSJD_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_ZSJD_HTML.html
@@ -2,6 +2,7 @@
 <div class="steps">
 	<div class="clearfix">
 	   	<div class="steps_tit">%bind(:1)</div>
+	   	<a href="%bind(:7)" class="steps_btn">%bind(:8)</a>
 	   	<a href="%bind(:4)" class="steps_btn">%bind(:3)</a>
 	   	<!-- <a href="%bind(:6)" class="steps_btn">%bind(:5)</a> -->
 	</div>
