清华手机版报名中心修改

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_ZSJD_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_ZSJD_HTML.html
@@ -2,11 +2,10 @@
 <div class="steps">
 	<div class="clearfix">
 	   	<div class="steps_tit">%bind(:1)</div>
-	   	<a href="%bind(:7)" class="steps_btn">%bind(:8)</a>
 	   	<a href="%bind(:4)" class="steps_btn">%bind(:3)</a>
 	   	<!-- <a href="%bind(:6)" class="steps_btn">%bind(:5)</a> -->
 	</div>
-	<div class="steps_mba">
+	<div class="steps_mba" onclick="window.location.href='%bind(:7)';">
 		%bind(:2)
 	<!-- 
 	   	<div class="step_li step_ed">
