--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
@@ -118,6 +118,7 @@
 					<div class="clear"></div>
 				</div>
 				<div id="unite_gallery_box" style="display: none"></div>
+				<p class="submitdesc" style="display:none;" id="desc_submit">%bind(:23)</p>
 				<div class="submit" style="display:none;" id="app_submit">
 					%bind(:15)&nbsp;&nbsp;
 					<span class="sendbtn"><img src="%bind(:21)/statics/js/onlineSurvey/images/m/gou.png" /></span>
@@ -442,6 +443,7 @@
 			//提交按钮是否每页都显示
 			//if(commitRule == "0"){
 				SurveyBuild.curPageNo == SurveyBuild.maxPage ? $(".submit").show():$(".submit").hide();
+				SurveyBuild.curPageNo == SurveyBuild.maxPage && SurveyBuild.subState == "S" ? $(".submitdesc").show():$(".submitdesc").hide();
 			//}else{
 			//	$(".submit").show();
 			//}
