--- a/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_HTML.html
+++ b/src/main/resources/html/TZWebStationLetterMgBundle/TZ_WEB_ZNX_MG_HTML.html
@@ -11,6 +11,7 @@
 </script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/broad/pagefunc.js"></script>
+<script type="text/javascript" src="%bind(:1)/statics/js/lib/layer/layer.js"></script>
 <link href="%bind(:5)" rel="stylesheet" type="text/css">
 <script type="text/javascript">
 	$.format = function (source, params) { 
@@ -108,6 +109,7 @@
    	});
    	
    	function loadStationMails(page,start,search){
+   		/*
 	   	 var tzParams = {
 	   			 ComID:"TZ_WEBSITE_ZNX_COM",
 	   			 PageID:"TZ_WEBSITE_ZNX_STD",
@@ -122,7 +124,18 @@
 	   					 }
 	   	 		}
 	   	 	};
-
+		*/
+		var tzParams = {
+	   			 ComID:"TZ_WEBSITE_ZNX_COM",
+	   			 PageID:"TZ_WEBSITE_ZNX_STD",
+	   			 OperateType:"QG",
+	   			 comParams:{
+	   				searchText: search
+	   	 		}
+	   	 	};
+	   	var layerIndex = layer.load(2, {
+	   	  shade: [0.1,'#fff'] //0.1透明度的白色背景 
+	   	});
 		 $.ajax({
 				type:"POST",
 				url: urlBegin,
@@ -133,6 +146,7 @@
 					limit:15
 				},
 				success:function(response){
+					layer.close(layerIndex);
 					try{
 						var data = eval("("+response+")").comContent;
 						
@@ -183,7 +197,7 @@
 					}
 				},
 		    	failure: function () {
-				  		//ToDo
+		    		layer.close(layerIndex);
 		    	}    
 		});
    	};
