材料评审评委端“获取下一个考生”按钮增加处理完成后才可再次点击

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
@@ -126,7 +126,7 @@ th {
 						<td><input id="ks_show_tz_app_ins_id" name="ks_show_tz_app_ins_id" value="%bind(:6)" type="hidden"/></td>
 					</tr>
 					<tr>
-						<td colspan="3"><div id="ks_look_back_info">请输入考生申请号或姓名进行搜索</div></td>
+						<td colspan="3">&nbsp;<div id="ks_look_back_info">请输入考生申请号或姓名进行搜索</div></td>
 					</tr>
 				</table>				  
 				<a href="javascript:void(0);" id="ks_search_look"  onclick="ks_look();"   data-role="button" data-inline="true" data-mini="true" data-icon="search">查 找</a>
