--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
@@ -743,6 +743,14 @@
 		%bind(:30)
 		<!--菜单内容结束-->
 		<!--空白开始-->
+		<div style="
+    position: fixed;
+    top: 2rem;
+    width: 100%;
+    background-color: #f1f1f1;
+    height: 0.2rem;
+    z-index: 1000;
+	"></div>
 		<div class="addno" style="height: 2rem;"></div>
 		<!--空白结束-->
 		<div class="tabNote">
