--- a/src/main/resources/html/TZApplicationTemplateBundle/TZ_TEMPLATE_HTML.html
+++ b/src/main/resources/html/TZApplicationTemplateBundle/TZ_TEMPLATE_HTML.html
@@ -160,6 +160,12 @@
  				$("#tabs").tabs();
 			 	$("#question-type-box").accordion({heightStyle: "content"});
 				SurveyBuild.init("%bind(:3)");
+				
+				
+				$(".tabNav_child").css("display","none");
+			      $(".tabNav").click(function(){
+			         $(this).children(".tabNav_child").slideToggle(800);
+			      });
 
 			});			
 
