--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MPROVINCE_SELECTOR_HTML.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MPROVINCE_SELECTOR_HTML.html
@@ -33,7 +33,7 @@
  <div class="bg1">
 	     <!-- 头部 -->
 	     <div class="topbar">
-	   	    院校选择 <a  href="javascript:void(0)" class="return_r" onclick="returnResi()"><i></i></a>
+	   	    省份选择 <a  href="javascript:void(0)" class="return_r" onclick="returnResi()"><i></i></a>
 	   	 </div>
 	   	 <div class="country_pop">
 <div class="pop_tit">
