面试评审评委端相关优化和修改

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_TOUCH_GRADE.html
@@ -231,8 +231,8 @@ th {
 						}
  					});
 				</script>
-					<div id="div_bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)" style="width:auto; height:auto" >
-						<iframe id="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)" style="width:100%;min-height:400px;border:0;" src="" name="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)">
+					<div id="div_bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)" style="width:auto; height:auto ;-webkit-overflow-scrolling:touch; overflow: scroll;" >
+						<iframe id="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)" style="width:100%;min-height:800px;border:0;" src="" name="bmb_iframe_%bind(:4)_%bind(:5)_%bind(:6)">
 						</iframe>
 					</div>
 
