活动报名席位数竞争锁表无效优化

--- a/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
+++ b/src/main/resources/html/TZEventsMobileBundle/TZ_M_APPLY_REG_FORM_HTML.html
@@ -164,13 +164,13 @@
 			strParam = strParam.substr(0,strParam.length-1);
 			strParam = strParam + "}";
 			
-			var strComParams = "{\"ComID\":\"TZ_HD_MOBILE_COM\",\"PageID\":\"TZ_HD_APPFORM_STD\",\"OperateType\":\"EJSON\",\"comParams\":"+ strParam + "}";
+			var strComParams = "{\"ComID\":\"TZ_APPONL_COM\",\"PageID\":\"TZ_APPREG_STD\",\"OperateType\":\"EJSON\",\"comParams\":"+ strParam + "}";
 			$.ajax({
 				type : "POST",
 				url : applyURL,
 				dataType:"json",
 				async:false,
-				data:{"tzParams": strComParams},
+				data:{"tzParams": strComParams, "FORM": "M"},
 				success: function(resp){
 					if(resp.state.errcode == "1"){
 						alert(resp.state.errdesc);
