清华手机版报名中心修改

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_NO_ZSJD_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_INDEX_NO_ZSJD_HTML.html
@@ -3,6 +3,6 @@
 	   	 <div class="steps_tit">面试申请</div>
 	 </div>
 	 <div style="padding:15px;font-size:0.44rem;color:#666">
-	   	 <p>系统暂时不提供手机在线申请,请使用PC登录网站申请</p>  
+	   	 <p>暂未开放申请</p>  
 	 </div>
 </div>
