--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_NO_APP_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_NO_APP_HTML.html
@@ -4,6 +4,6 @@
 	   	    状态查询<a  href="javascript:history.back(-1);"><i></i></a>
 	</div>
 	<img class="none" src="%bind(:1)/statics/css/website/m/images/none.png">
-	<p class="none_tips">系统暂时不提供手机在线申请,请使用PC登录网站申请</p>
+	<p class="none_tips">暂无申请记录</p>
 	<!-- <div class="new_btn">开始新申请</div> -->
 </div>
