--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_INTRO_M_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_INTRO_M_HTML.html
@@ -1,139 +1,162 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<title>%bind(:7)</title>
-		<link href="%bind(:12)/statics/js/onlineSurvey/css/m/public.css" rel="stylesheet" type="text/css" />
-		<link href="%bind(:12)/statics/js/onlineSurvey/css/m/index.css" rel="stylesheet" type="text/css" />
-		<script type="text/javascript" src="%bind(:12)/statics/js/lib/jquery/jquery.min.js"></script>
-		<script type="text/javascript" src="%bind(:12)/statics/js/onlineSurvey/layer/layer.js"></script>
-		<script type="text/javascript" src="%bind(:12)/statics/js/onlineSurvey/layer/extend/layer.ext.js"></script>
-		<script>
-			var passAuth = "%bind(:10)";				//是否密码安全
-			var tzGeneralURL = "%bind(:4)";
-			var beginURL = "%bind(:4)?classid=surveyapp&SURVEY_WJ_ID=%bind(:5)";
-			var surveyInsId = "%bind(:6)";
-			function begin(){
-				if(parseInt(surveyInsId) > 0) {
-					beginURL = beginURL + "&SURVEY_INS_ID=" + surveyInsId;
-				}
-				//是否密码安全
-				if(passAuth && passAuth === "Y"){
-					var is_password = getcookie("SURVEY_WJ_IS_PASSWORD");
-					var targetVal = surveyInsId + "_" + templId + "_Y";
-					if(is_password && is_password === targetVal){
-						//Cookie中保存的密码，验证通过
-						location.href = beginURL + "&F=Y";
-					}else{
-						layer.prompt(
-							{
-						    	title: '输入问卷密码，并确认',
-						    	formType: 1,
-								closeBtn: false
-							},
-							function(pass){
-								var tzPassParams = '{"ComID":"TZ_ZXDC_WJGL_COM","PageID":"TZ_SURVEY_APP_STD","OperateType":"EJSON","comParams":{"EType":"PASSWORD","SURVEY_WJ_ID":' + templId + ',"SURVEY_INS_ID":"' + surveyInsId + '","PASSWORD":"' + pass + '"}}';
-					            $.ajax({
-					                type: "POST",
-									url:tzGeneralURL,
-					                data: {
-										tzParams:tzPassParams
-					                },
-					                dataType: "JSON",
-					                success: function(f) {
-										if (f.state.errcode == "0") {
-											if(f.comContent.code && f.comContent.code == "0"){
-												layer.closeAll();
-												//新输入的密码，验证通过
-												location.href = beginURL + "&F=Y";
-											}else{
-												alert(f.comContent.msg);
-											}
+<html>
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta charset="utf-8">
+<meta name="format-detection" content="telephone=no">
+<meta name="viewport"
+	content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;" />
+<title>%bind(:7)</title>
+<link href="%bind(:12)/statics/js/onlineSurvey/css/m/mobile.css"
+	rel="stylesheet" type="text/css">
+<script type="text/javascript"
+	src="%bind(:12)/statics/js/onlineSurvey/js/m/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="%bind(:12)/statics/js/onlineSurvey/js/m/rem.js"></script>
 
-										}else{
-											alert("系统错误！");
-										}
-					                }
-					            });
-							}
-						);
-					}
-				}else{
-					location.href = beginURL + "&F=Y";
-				}
-			}
-		</script>
-	</head>
-	<body>
-		<div class="container">
-			<!-- 
-			<div class="top">
-				%bind(:8)
-				<div class="clear"></div>
-			</div>
-			 -->
-			<div class="uploadlogo">
-				%bind(:1)
-			</div>
+<script>
+	var passAuth = "%bind(:10)"; //是否密码安全
+	var tzGeneralURL = "%bind(:4)";
+	var beginURL = "%bind(:4)?classid=surveyapp&SURVEY_WJ_ID=%bind(:5)";
+	var surveyInsId = "%bind(:6)";
+	var templId = "%bind(:11)"; //模板ＩＤ
 
-			<div class="maincon" style="min-height:300px;">
-				%bind(:2)
-			</div>
-			<div style="float:right;"><a href="#" onclick="javascript:begin()"><div class="pagebtn1">%bind(:9) ></div></a></div>
-			<div class="fotter">
-				%bind(:3)
+</script>
+</head>
+<body>
+	<div class="viewport-adaptive">
+		<div class="bg">
+			<div class="title">%bind(:7)</div>
+			<div class="main_body">
+				<!-- 卷首内容 -->
+				<div class="top_inner">%bind(:1)</div>
+				<!--  <div class="top_inner" style="min-height:300px;">-->
+				<div class="qdy_top">%bind(:2)</div>
+					<div class="start">%bind(:9)</div>
+				<!-- 卷尾内容 -->
+				<div class="footer">
+					<!--  北京创景咨询提供技术支持-->
+					%bind(:3)
+				</div>
 			</div>
 		</div>
-	</body>
-	<script type="text/javascript">
-		function getcookie(name){
-			var name=unescape(name);
-			var start = document.cookie.indexOf(name);
-			var end = document.cookie.indexOf(";", start);
-			return start == -1 ? '' : unescape(document.cookie.substring(start + name.length + 1, (end > start ? end : document.cookie.length)));
-		}
+	</div>
+	<!-- 透明层 -->
+	<div class="shade"></div>
+	<!-- 弹窗内容 -->
+	<div class="pop_body">
+		<p class="pop_tit">密码</p>
+		<div class="pop_list">
+			<p>请输入密码：</p>
+			<div class="text_box1">
+				<input type="password" name="" placeholder="" id="pwd">
+			</div>
+		</div>
+		<div class="pop_btn">
+			<div class="pop_btn_left">取消</div>
+			<div class="pop_btn_right">确定</div>
+		</div>
+	</div>
+</body>
+<script type="text/javascript">
 
-		var templId = "%bind(:11)";					//模板ＩＤ
+	function getcookie(name) {
+		var name = unescape(name);
+		var start = document.cookie.indexOf(name);
+		var end = document.cookie.indexOf(";", start);
+		return start == -1 ? '' : unescape(document.cookie
+			.substring(start + name.length + 1, (end > start ? end
+					: document.cookie.length)));
+	}
+
+	$(".start").click(function () {
+		console.log("start");
+		if (parseInt(surveyInsId) > 0) {
+			beginURL = beginURL + "&SURVEY_INS_ID=" + surveyInsId;
+		}
 		//是否密码安全
-		if(passAuth && passAuth === "Y"){
+		console.log("passAuth=" + passAuth);
+		if (passAuth && passAuth === "Y") {
 			var is_password = getcookie("SURVEY_WJ_IS_PASSWORD");
+			console.log("is_password=" + is_password);
 			var targetVal = surveyInsId + "_" + templId + "_Y";
-			if(is_password && is_password === targetVal){
+			console.log("targetVal=" + targetVal);
+			if (is_password && is_password === targetVal) {
 				//Cookie中保存的密码，验证通过
-			}else{
-				layer.prompt(
-					{
-				    	title: '输入问卷密码，并确认',
-				    	formType: 1,
-						closeBtn: false
-					},
-					function(pass){
-						var tzPassParams = '{"ComID":"TZ_ZXDC_WJGL_COM","PageID":"TZ_SURVEY_APP_STD","OperateType":"EJSON","comParams":{"EType":"PASSWORD","SURVEY_WJ_ID":' + templId + ',"SURVEY_INS_ID":"' + surveyInsId + '","PASSWORD":"' + pass + '"}}';
-			            $.ajax({
-			                type: "POST",
-							url:tzGeneralURL,
-			                data: {
-								tzParams:tzPassParams
-			                },
-			                dataType: "JSON",
-			                success: function(f) {
-								if (f.state.errcode == "0") {
-									if(f.comContent.code && f.comContent.code == "0"){
-										layer.closeAll();
-										//新输入的密码，验证通过
-									}else{
-										alert(f.comContent.msg);
-									}
-
-								}else{
-									alert("系统错误！");
-								}
-			                }
-			            });
-					}
-				);
+				location.href = beginURL + "&F=Y";
+			} else {
+				$(".shade").show();
+				$(".pop_body").show();
 			}
+		} else {
+			location.href = beginURL + "&F=Y";
 		}
-	</script>
+
+	});
+
+	$(".pop_btn_left").click(function () {
+    	$(".shade").hide();
+    	$(".pop_body").hide();
+
+	});
+	$(".pop_btn_right").click(function () {
+		var pass = $("#pwd").val();
+		var tzPassParams = '{"ComID":"TZ_ZXDC_WJGL_COM","PageID":"TZ_SURVEY_APP_STD","OperateType":"EJSON","comParams":{"EType":"PASSWORD","SURVEY_WJ_ID":' + templId + ',"SURVEY_INS_ID":"' + surveyInsId + '","PASSWORD":"' + pass + '"}}';
+    	$.ajax({
+        	type: "POST",
+			url:tzGeneralURL,
+        	data: {
+				tzParams:tzPassParams
+        	},
+        	dataType: "JSON",
+        	success: function(f) {
+				if (f.state.errcode == "0") {
+					if(f.comContent.code && f.comContent.code == "0"){
+						//新输入的密码，验证通过
+						if (parseInt(surveyInsId) > 0) {
+								beginURL = beginURL + "&SURVEY_INS_ID=" + surveyInsId;
+						}
+						location.href = beginURL + "&F=Y";
+					}else{
+						alert(f.comContent.msg);
+					}
+
+				}else{
+					alert("系统错误！");
+				}
+        	}
+    	});
+	});
+	$(window).load(function(){
+ 
+  		initStyles();
+	});
+
+	$(window).resize(function(){
+ 
+  		initStyles();
+	});
+
+	function initStyles() {
+    	var allHeight=$(window).height();
+     	var popheight=$(".pop_body").height();
+     	$(".pop_body").css("top",allHeight/2-popheight/2-10+"px");
+	}
+	
+	
+	//进入页面校验是否需要密码
+	//var templId = "%bind(:11)"; //模板ＩＤ
+	//是否密码安全
+	/* if (passAuth && passAuth === "Y") {
+		var is_password = getcookie("SURVEY_WJ_IS_PASSWORD");
+		console.log("is_password=" + is_password);
+		var targetVal = surveyInsId + "_" + templId + "_Y";
+		console.log("targetVal=" + targetVal);
+		if (is_password && is_password === targetVal) {
+			//Cookie中保存的密码，验证通过
+		} else {
+			$(".shade").show();
+			$(".pop_body").show();
+			$(".pop_btn_left").hide();
+		}
+	} */
+</script>
 </html>
