在线调查 预览图片所需修改

--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
@@ -6,7 +6,7 @@
 		<title>%bind(:13)</title>
 		<link rel="stylesheet" href="%bind(:21)/statics/js/onlineSurvey/css/m/LCalendar.css"/>
 		<link href="%bind(:21)/statics/js/onlineSurvey/css/m/mobile.css" rel="stylesheet" type="text/css"/>
-
+		<link rel="stylesheet" href="%bind(:21)/statics/js/survey/assets/libs/unitegallery/css/unite-gallery.css" type="text/css"/>
 		<script type="text/javascript">
 			var TzUniversityContextPath = "%bind(:21)";
 		</script>
