--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
@@ -390,12 +390,19 @@
 								$("#" + currentPageId+" .complete").remove();
 							}
 							layer.closeAll();
-							noteing(MsgSet.SAVE_SUCCEED);
+							layer.msg(MsgSet.SAVE_SUCCEED, 2, {
+							    type: 9,
+							    shade: false
+							});
 							SurveyBuild.saveTjx_fj();
 	
 						} else {
 							layer.closeAll();
-							noteing(MsgSet.SAVE_FAILD + "," + f.state.errdesc, 2);
+							layer.msg(MsgSet.SAVE_FAILD + "," + f.state.errdesc, 2, {
+							    type: 8,
+							    shade: false
+							});
+							
 						}
 					}
 				});
