手机报名表 上传照片控件，保存照片的同时，保存报名表

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML3.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML3.html
@@ -84,6 +84,9 @@ $(function(){
 		                    	var _iItem = $("#photox",window.top.document).parent().siblings("input");
 		                    	_iItem.val(imaPath1+sysFileName);
 		                    	$('#view').attr('src',"");
+		                    	//保存报名表
+								console.log("SAVA BMB");
+								window.parent.$("#app_save").click();
 		                    	layer.closeAll();
 		                    	$(".htmleaf-container").hide();
 		                    	}
