--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
@@ -234,7 +234,11 @@
 											//做如下修改 以适用分组框 modity by caoy
 											//layer.close(layer.index);
 											$("#loading").fadeOut();
+											//保存报名表
+											console.log("SAVA BMB");
+											window.parent.$("#app_save").click();
 											closeThis();
+
 				                        }else{
 				                        	 //closeThis();
 											 alert("%bind(:12)");
