浮动框旁边显示一个滚动条状态

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -49,7 +49,7 @@
 	<script type="text/javascript" src="%bind(:32)/statics/js/tranzvision/appwidget/ValidationRules.js"></script>
 	<script type="text/javascript" src="%bind(:32)/statics/js/lib/formvalidator/formValidator.js"></script>
 	<script type="text/javascript" src="%bind(:32)/statics/js/lib/jquery/chosen.jquery.js"></script>
-	
+	<script type="text/javascript" src="%bind(:32)/statics/js/tranzvision/appwidget/m/iscroll.js"></script>
 	
 	<script type="text/javascript">
 		MsgSet = %bind(:14);
