--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
@@ -344,7 +344,10 @@
 		
 							} else {
 								layer.closeAll();
-								noteing(MsgSet.SUBMIT_FAILD + "," + f.state.errdesc, 2);
+								layer.msg(MsgSet.SAVE_FAILD + "," + f.state.errdesc, 2, {
+								    type: 8,
+								    shade: false
+								});
 							}
 						}
 					});
@@ -459,11 +462,17 @@
 								}
 								tabChange("prev");
 								layer.closeAll();
-								noteing(MsgSet.SAVE_SUCCEED);
+								layer.msg(MsgSet.SAVE_SUCCEED, 2, {
+								    type: 9,
+								    shade: false
+								});
 								SurveyBuild.saveTjx_fj();
 							} else {
 								layer.closeAll();
-								noteing(MsgSet.SAVE_FAILD + "," + f.state.errdesc, 2);
+								layer.msg(MsgSet.SAVE_FAILD + "," + f.state.errdesc, 2, {
+								    type: 8,
+								    shade: false
+								});
 							}
 
 						}
@@ -519,11 +528,17 @@
 								}
 								tabChange("next");
 								layer.closeAll();
-								noteing(MsgSet.SAVE_SUCCEED);
+								layer.msg(MsgSet.SAVE_SUCCEED, 2, {
+								    type: 9,
+								    shade: false
+								});
 								SurveyBuild.saveTjx_fj();
 							} else {
 								layer.closeAll();
-								noteing(MsgSet.SAVE_FAILD + "," + f.state.errdesc, 2);
+								layer.msg(MsgSet.SAVE_FAILD + "," + f.state.errdesc, 2, {
+								    type: 8,
+								    shade: false
+								});
 							}
 						}
 					});
@@ -595,7 +610,10 @@
 							setPageComplete(f.comContent.pageCompleteState);
 						} else {
 							layer.closeAll();
-							noteing(MsgSet.SUBMIT_FAILD + "," + f.state.errdesc, 2);
+							layer.msg(MsgSet.SAVE_FAILD + "," + f.state.errdesc, 2, {
+							    type: 8,
+							    shade: false
+							});
 						}
 					}
 				});
