修改提示语

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML_PHONE.html
@@ -319,7 +319,7 @@
 								if (f.comContent.code == "0") {
 									layer.closeAll();
 									//noteing(MsgSet.SUBMIT_SUCCEED);
-									layer.msg(MsgSet.SAVE_SUCCEED, 2, {
+									layer.msg(MsgSet.SUBMIT_SUCCEED, 2, {
 							    		type: 9,
 							    		shade: false
 									});
@@ -578,7 +578,7 @@
 							if (f.comContent.code == "0") {
 								layer.closeAll();
 								//noteing(MsgSet.SUBMIT_SUCCEED);
-								layer.msg(MsgSet.SAVE_SUCCEED, 2, {
+								layer.msg(MsgSet.SUBMIT_SUCCEED, 2, {
 								    type: 9,
 								    shade: false
 								});
