修改推荐信在管理后台 总是显示已提交的 BUG

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -1642,7 +1642,8 @@
 					$("#backindex").hide();
 				}
 				
-				if(tplType=="TJX" && appReadOnly == "Y"){
+				//if(tplType=="TJX" && appReadOnly == "Y"){
+				if("%bind(:54)" == "U" && tplType == "TJX"){
 					$("#txj_state").show();
 				}
 				
