--- a/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_TR_HTML.html
+++ b/src/main/resources/html/TZInterviewAppointmentBundle/TZ_GD_MS_APPOINT_TR_HTML.html
@@ -9,8 +9,8 @@
 		<div class="table_amount"><div class="%bind(:5)"></div><span class="amount">（%bind(:6)/%bind(:7)）</span></div>
 	</td>
 	<td>
-		<a href="javascript:void(0)" onclick=onConfirmAppointment(this,"%bind(:8)","%bind(:9)","%bind(:10)") class="zxj_opera %bind(:11)">
-			%bind(:12)
+		<a href="javascript:void(0)" onclick=onConfirmAppointment(this,"%bind(:8)") class="zxj_opera %bind(:9)">
+			%bind(:10)
 		</a>
 	</td>
 </tr>
