--- a/src/main/resources/html/TZInterviewAppointmentBundle/TZ_M_MS_APPOINT_LIST_HTML3.html
+++ b/src/main/resources/html/TZInterviewAppointmentBundle/TZ_M_MS_APPOINT_LIST_HTML3.html
@@ -7,7 +7,7 @@
  			<div class="time_inner"><span>报到地点:</span>%bind(:3)</div>
  			<div class="time_inner"><span>备&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注:</span>%bind(:4)</div>
  			<div class="time_inner"><span>预约状态:</span><span class="green">%bind(:5)</span></div>
- 			<a href="javascript:void(0)" onclick=onConfirmAppointment(this,"%bind(:6)","%bind(:7)","%bind(:8)") class="btn-enabled gray2">%bind(:9)</a>
+ 			<a href="javascript:void(0)" onclick=onConfirmAppointment(this,"%bind(:6)") class="btn-enabled gray2">%bind(:7)</a>
  		</div>
  	</div>
 </div>
