--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_ZNX_LIST_HTML.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_ZNX_LIST_HTML.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta charset="utf-8">
 <meta name="format-detection" content="telephone=no">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0;"/>
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0"/>
 <title>%bind(:1)</title>
 <!-- 需要引入的css和js  -->
 <link href="%bind(:2)/statics/css/website/m/css/style.css" rel="stylesheet" type="text/css">
